configured Google API Key to be read from local file

--- a/YTPLApp/YTPLApp.csproj
+++ b/YTPLApp/YTPLApp.csproj
@@ -126,6 +126,7 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\angular.min.js.map" />
+    <Content Include="GoogleKeys.json" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
