--- a/YTPLApp/packages.config
+++ b/YTPLApp/packages.config
@@ -5,6 +5,7 @@
   <package id="Google.Apis" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.Auth" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.Core" version="1.15.0" targetFramework="net452" />
+  <package id="Google.Apis.Discovery.v1" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.YouTube.v3" version="1.15.0.574" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
