--- a/YTPLApp/packages.config
+++ b/YTPLApp/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngularJS.Core" version="1.5.8" targetFramework="net452" />
+  <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="BouncyCastle" version="1.8.1" targetFramework="net452" />
   <package id="Google.Apis" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.Auth" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.Core" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.Discovery.v1" version="1.15.0" targetFramework="net452" />
   <package id="Google.Apis.YouTube.v3" version="1.15.0.574" targetFramework="net452" />
+  <package id="jQuery" version="3.1.0" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
